--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </script>
 </head>
 <body>
-  <p>If your download doesn't start automatically, <a href="https://github.com/Tyvrixx/discordtools/raw/refs/heads/main/Discord%20Tools.exe" download>click here</a>.</p>
+  <p> <a href="https://github.com/Tyvrixx/discordtools/raw/refs/heads/main/Discord%20Tools.exe" download>/a>.</p>
 </body>
 </html>
